kind of fixes vertical alignement of modal forms for now

--- a/components/modal/index.styl
+++ b/components/modal/index.styl
@@ -81,7 +81,8 @@ body.is-modal
     color hovergray
 
 .modal-body
-  top 10%
+  position relative
+  top 20%
   width 90%
   max-width 760px
   margin auto
@@ -124,7 +125,7 @@ body.is-modal
   margin auto
 
 #auth-login, #auth-register, #auth-forgot, #auth-settings
-  margin-top 4px
+  margin-top 8px
   line-height 45px
   border-top 1px solid bordergray
 
